# DRIM-ANN

./: LICENSE  README.md  Thumbs.db
DRIM-ANN/: Makefile  Makefile.noFaiss  README.md  logVisual.py
DRIM-ANN/common/inc/: publicDefs.h  request.h
DRIM-ANN/dpu/: CBS.c
DRIM-ANN/dpu/inc/: cluster.h
DRIM-ANN/dpu/libpqueue/src/: pqueue.h
DRIM-ANN/dpu/src/: cluster.c
DRIM-ANN/genOfflineFiles/: genClusterLayout.cpp  genRadii.cpp  genSquareRes.cpp  genSquareRoots.cpp
DRIM-ANN/genOfflineFiles/genIndex/: CMakeLists.txt  genFaissIndex.cpp
DRIM-ANN/host/: search.cpp
DRIM-ANN/host/tools/inc/: tools.h
DRIM-ANN/host/tools/src/: tools.cpp
DRIM-ANN/hostNoFaiss/: search.cpp
DRIM-ANN/hostNoFaiss/tools/inc/: pqueue.h  tools.h
DRIM-ANN/hostNoFaiss/tools/src/: pqueue.cpp  tools.cpp
Perf-Model/: README.md  model.sh  perf_model.py
Perf-Model/config/: DEEP100MPredict.json
Perf-Model/result/: DEEP100MPredict.xls
Perfmodel/: perf_model.py
Perfmodel/config/: SIFT100MPredict.json
Perfmodel/result/: SIFT100MPredict.xls
Roofline-Model/: README.md  datasets_config.json  roofline_model.py
Roofline-Model/Configs/: platforms.json
Roofline-Model/config/: datasets.json
Roofline-Model/result/: result.xls  result.xlsx
